--- a/app/src/main/res/menu/menu_detail.xml
+++ b/app/src/main/res/menu/menu_detail.xml
@@ -14,4 +14,9 @@
         android:icon="@drawable/ic_share"
         app:showAsAction="never"
         />
+    <item
+        android:id="@+id/menu_location"
+        android:title = "위치설정"
+        app:showAsAction="never"
+        />
 </menu>
